--- a/project1/page2.html
+++ b/project1/page2.html
@@ -1,1 +1,83 @@
-hello
+<!DOCTYPE html>
+<html>
+<head>
+    <title>Paul Thomas Anderson</title>
+    <link href="style.css" rel="stylesheet" type="text/css"></link>
+</head>
+    <body class="ptaBody">
+        <a href="./index.html"><img class="homeButton" src="https://img.freepik.com/premium-vector/home-button_592324-18828.jpg"></a>
+        <div id="directorTextGroup">
+        <p id="directorText">Paul Thomas Anderson (born June 26, 1970), also known by his initials PTA, is an American filmmaker. His films are often psychological dramas, 
+            characterized by depictions of flawed and desperate characters, explorations of dysfunctional families, alienation, loneliness and redemption, and a bold visual 
+            style that uses moving camera and long takes.</p>
+        <p id="directorText">His films have garnered critical acclaim. He has been nominated for eleven Academy Awards, three Golden Globe Awards, 
+            and eight BAFTA Awards (winning one), and received Best Director awards from the Cannes, Venice, and Berlin film festivals, also winning the Golden Bear at the latter</p>
+        </div>
+        <img class="whiteLine" src="https://img.freepik.com/premium-photo/bloodhounddog_830154-297.jpg?w=2000" title="Home Button" alt="Home Button">
+        <div id="directorList">
+            <h4>My Personal Top 5 Films In PTA's Filmography</h4>
+            <ol>
+                <li>The Master</li>
+                <li>Boogie Nights</li>
+                <li>Punch Drunk Love</li>
+                <li>There Will Be Blood</li>
+                <li>Magnolia</li>
+            </ol>
+        </div>
+        <img class="whiteLine" src="https://img.freepik.com/premium-photo/bloodhounddog_830154-297.jpg?w=2000" title="Home Button" alt="Home Button">
+        <div id="filmographyTable">
+            <h4>Filmography</h4>
+            <table>
+                <tr>
+                  <th>Year</th>
+                  <th>Title</th>
+                  <th>IMDB Rating</th>
+                </tr>
+                <tr>
+                  <td>1996</td>
+                  <td>Hard Eight</td>
+                  <td>7.1</td>
+                </tr>
+                <tr>
+                  <td>1997</td>
+                  <td>Boogie Nights</td>
+                  <td>7.9</td>
+                </tr>
+                <tr>
+                  <td>1999</td>
+                  <td>Magnolia</td>
+                  <td>8.0</td>
+                </tr>
+                <tr>
+                  <td>2002</td>
+                  <td>Punch-Drunk Love</td>
+                  <td>7.3</td>
+                </tr>
+                <tr>
+                  <td>2007</td>
+                  <td>There Will Be Blood</td>
+                  <td>8.2</td>
+                </tr>
+                <tr>
+                  <td>2012</td>
+                  <td>The Master</td>
+                  <td>7.1</td>
+                </tr>
+                <tr>
+                    <td>2014</td>
+                    <td>Inherent Vice</td>
+                    <td>6.6</td>
+                </tr>
+                <tr>
+                    <td>2017</td>
+                    <td>Phantom Thread</td>
+                    <td>7.4</td>
+                </tr>
+                <tr>
+                    <td>2021</td>
+                    <td>Licorice Pizza</td>
+                    <td>7.1</td>
+                </tr>
+              </table>
+        </div>
+    </body>
