--- a/project1/page3.html
+++ b/project1/page3.html
@@ -1,1 +1,158 @@
-hello 2
+<!DOCTYPE html>
+<html>
+<head>
+    <title>Martin Scorsese</title>
+    <link href="style.css" rel="stylesheet" type="text/css"></link>
+</head>
+    <body class="scorseseBody">
+        <a href="./index.html"><img class="homeButton" src="https://img.freepik.com/premium-vector/home-button_592324-18828.jpg"></a>
+        <div id="directorTextGroup">
+        <p id="directorText">Martin Charles Scorsese, born November 17, 1942, is an American and Italian film director, producer, screenwriter and actor. 
+          Scorsese emerged as one of the major figures of the New Hollywood era. In the 1970s and 1980s decades, Scorsese's films, much influenced by his Italian-American background and upbringing in New York City, 
+          center on macho-posturing men and explore crime, machismo, nihilism, and Catholic concepts of guilt and redemption.</p>
+        <p id="directorText">He is the recipient of many major accolades, including an Academy Award, four BAFTA Awards, three Emmy Awards, a Grammy Award, three Golden Globe Awards, and two Directors Guild of America Awards.
+          Five of his films have been inducted into the National Film Registry by the Library of Congress as "culturally, historically or aesthetically significant"</p>
+        </div>
+        <img class="whiteLine" src="https://img.freepik.com/premium-photo/bloodhounddog_830154-297.jpg?w=2000" title="Home Button" alt="Home Button">
+        <div id="directorList">
+            <h4>My Personal Top 5 Films In Scorsese's Filmography</h4>
+            <ol>
+                <li>Goodfellas</li>
+                <li>Taxi Driver</li>
+                <li>Casino</li>
+                <li>The King of Comedy</li>
+                <li>The Irishman</li>
+            </ol>
+        </div>
+        <img class="whiteLine" src="https://img.freepik.com/premium-photo/bloodhounddog_830154-297.jpg?w=2000" title="Home Button" alt="Home Button">
+        <div id="filmographyTable">
+            <h4>Filmography</h4>
+            <table>
+                <tr>
+                  <th>Year</th>
+                  <th>Title</th>
+                  <th>IMDB Rating</th>
+                </tr>
+                <tr>
+                  <td>1967</td>
+                  <td>Who's That Knocking at My Door</td>
+                  <td>6.6</td>
+                </tr>
+                <tr>
+                  <td>1972</td>
+                  <td>Boxcar Bertha</td>
+                  <td>6.0</td>
+                </tr>
+                <tr>
+                  <td>1973</td>
+                  <td>Mean Streets</td>
+                  <td>7.2</td>
+                </tr>
+                <tr>
+                  <td>1974</td>
+                  <td>Alice Doesn't Live Here Anymore</td>
+                  <td>7.3</td>
+                </tr>
+                <tr>
+                  <td>1976</td>
+                  <td>Taxi Driver</td>
+                  <td>8.2</td>
+                </tr>
+                <tr>
+                  <td>1977</td>
+                  <td>New York, New York</td>
+                  <td>6.6</td>
+                </tr>
+                <tr>
+                    <td>1980</td>
+                    <td>Raging Bull</td>
+                    <td>8.1</td>
+                </tr>
+                <tr>
+                    <td>1982</td>
+                    <td>The King of Comedy</td>
+                    <td>7.8</td>
+                </tr>
+                <tr>
+                    <td>1985</td>
+                    <td>After Hours</td>
+                    <td>7.6</td>
+                </tr>
+                <tr>
+                  <td>1986</td>
+                  <td>The Color of Money</td>
+                  <td>7.0</td>
+              </tr>
+                <tr>
+                  <td>1988</td>
+                  <td>The Last Temptation of Christ</td>
+                  <td>7.5</td>
+              </tr>
+                <tr>
+                  <td>1990</td>
+                  <td>Goodfellas</td>
+                  <td>8.7</td>
+              </tr>
+                  <tr>
+                    <td>1993</td>
+                    <td>The Age of Innocence</td>
+                    <td>7.2</td>
+                </tr>
+                    <tr>
+                      <td>1995</td>
+                      <td>Casino</td>
+                      <td>8.2</td>
+                  </tr>
+                  <tr>
+                    <td>1997</td>
+                    <td>Kundun</td>
+                    <td>7.0</td>
+                </tr>
+                <tr>
+                  <td>1999</td>
+                  <td>Bringing Out the Dead</td>
+                  <td>6.8</td>
+                </tr>
+                <tr>
+                  <td>2002</td>
+                  <td>Gangs of New York</td>
+                  <td>7.5</td>
+                </tr>
+                <tr>
+                  <td>2004</td>
+                  <td>The Aviator</td>
+                  <td>7.5</td>
+                </tr>
+                <tr>
+                  <td>2006</td>
+                  <td>The Departed</td>
+                  <td>8.5</td>
+                </tr>
+                <tr>
+                  <td>2010</td>
+                  <td>Shutter Island</td>
+                  <td>8.2</td>
+                </tr>
+                <tr>
+                  <td>2011</td>
+                  <td>Hugo</td>
+                  <td>7.5</td>
+                </tr>
+                <tr>
+                  <td>2013</td>
+                  <td>The Wolf of Wall Street</td>
+                  <td>8.2</td>
+                </tr>
+                <tr>
+                  <td>2016</td>
+                  <td>Silence</td>
+                  <td>7.2</td>
+                </tr>
+                <tr>
+                  <td>2019</td>
+                  <td>The Irishman</td>
+                  <td>7.8</td>
+                </tr>
+              </table>
+        </div>
+    </body>
