fixed scorsese page

--- a/project1/page3.html
+++ b/project1/page3.html
@@ -13,7 +13,7 @@
         <p id="directorText">He is the recipient of many major accolades, including an Academy Award, four BAFTA Awards, three Emmy Awards, a Grammy Award, three Golden Globe Awards, and two Directors Guild of America Awards.
           Five of his films have been inducted into the National Film Registry by the Library of Congress as "culturally, historically or aesthetically significant"</p>
         </div>
-        <img class="whiteLine" src="https://img.freepik.com/premium-photo/bloodhounddog_830154-297.jpg?w=2000" title="Home Button" alt="Home Button">
+        <img class="whiteLine" src="https://img.freepik.com/premium-photo/bloodhounddog_830154-297.jpg?w=2000" title="White Line" alt="White Line">
         <div id="directorList">
             <h4>My Personal Top 5 Films In Scorsese's Filmography</h4>
             <ol>
@@ -24,7 +24,7 @@
                 <li>The Irishman</li>
             </ol>
         </div>
-        <img class="whiteLine" src="https://img.freepik.com/premium-photo/bloodhounddog_830154-297.jpg?w=2000" title="Home Button" alt="Home Button">
+        <img class="whiteLine" src="https://img.freepik.com/premium-photo/bloodhounddog_830154-297.jpg?w=2000" title="White Line" alt="White Line">
         <div id="filmographyTable">
             <h4>Filmography</h4>
             <table>
