--- a/project1/index.html
+++ b/project1/index.html
@@ -4,7 +4,7 @@
     <title>The Greatest Directors</title>
     <link href="style.css" rel="stylesheet" type="text/css"></link>
 </head>
-    <body>
+    <body class="headerContainer">
         <div class="headerContainer">
             <div class="headerTitle">
                 <h1 class="headerText">The Greatest Directors of All Time</h1>
