--- a/project1/page4.html
+++ b/project1/page4.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
     <title>Stanley Kubrick</title>
-    <link href="style.css" rel="stylesheet" type="text/css"></link>
+    <link href="style.css" rel="stylesheet" type="text/css">
 </head>
     <body class="kubrickBody">
         <a href="./index.html"><img class="homeButton" src="https://img.freepik.com/premium-vector/home-button_592324-18828.jpg"></a>
