--- a/project1/index.html
+++ b/project1/index.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
     <title>The Greatest Directors</title>
-    <link href="style.css" rel="stylesheet" type="text/css"></link>
+    <link href="style.css" rel="stylesheet" type="text/css">
 </head>
     <body class="headerContainer">
         <div class="headerContainer">
