--- a/project1/page2.html
+++ b/project1/page2.html
@@ -5,12 +5,12 @@
     <link href="style.css" rel="stylesheet" type="text/css">
 </head>
     <body class="ptaBody">
-        <a href="./index.html"><img class="homeButton" src="https://img.freepik.com/premium-vector/home-button_592324-18828.jpg"></a>
+        <a href="./index.html"><img class="homeButton" src="https://img.freepik.com/premium-vector/home-button_592324-18828.jpg" alt="Home Button"></a>
         <div id="directorTextGroup">
-        <p id="directorText">Paul Thomas Anderson (born June 26, 1970), also known by his initials PTA, is an American filmmaker. His films are often psychological dramas, 
+        <p>Paul Thomas Anderson (born June 26, 1970), also known by his initials PTA, is an American filmmaker. His films are often psychological dramas, 
             characterized by depictions of flawed and desperate characters, explorations of dysfunctional families, alienation, loneliness and redemption, and a bold visual 
             style that uses moving camera and long takes.</p>
-        <p id="directorText">His films have garnered critical acclaim. He has been nominated for eleven Academy Awards, three Golden Globe Awards, 
+        <p>His films have garnered critical acclaim. He has been nominated for eleven Academy Awards, three Golden Globe Awards, 
             and eight BAFTA Awards (winning one), and received Best Director awards from the Cannes, Venice, and Berlin film festivals, also winning the Golden Bear at the latter</p>
         </div>
         <img class="whiteLine" src="https://img.freepik.com/premium-photo/bloodhounddog_830154-297.jpg?w=2000" title="Home Button" alt="Home Button">
