--- a/project1/page3.html
+++ b/project1/page3.html
@@ -5,12 +5,12 @@
     <link href="style.css" rel="stylesheet" type="text/css">
 </head>
     <body class="scorseseBody">
-        <a href="./index.html"><img class="homeButton" src="https://img.freepik.com/premium-vector/home-button_592324-18828.jpg"></a>
+        <a href="./index.html"><img class="homeButton" src="https://img.freepik.com/premium-vector/home-button_592324-18828.jpg" alt="Home Button"></a>
         <div id="directorTextGroup">
-        <p id="directorText">Martin Charles Scorsese, born November 17, 1942, is an American and Italian film director, producer, screenwriter and actor. 
+        <p>Martin Charles Scorsese, born November 17, 1942, is an American and Italian film director, producer, screenwriter and actor. 
           Scorsese emerged as one of the major figures of the New Hollywood era. In the 1970s and 1980s decades, Scorsese's films, much influenced by his Italian-American background and upbringing in New York City, 
           center on macho-posturing men and explore crime, machismo, nihilism, and Catholic concepts of guilt and redemption.</p>
-        <p id="directorText">He is the recipient of many major accolades, including an Academy Award, four BAFTA Awards, three Emmy Awards, a Grammy Award, three Golden Globe Awards, and two Directors Guild of America Awards.
+        <p>He is the recipient of many major accolades, including an Academy Award, four BAFTA Awards, three Emmy Awards, a Grammy Award, three Golden Globe Awards, and two Directors Guild of America Awards.
           Five of his films have been inducted into the National Film Registry by the Library of Congress as "culturally, historically or aesthetically significant"</p>
         </div>
         <img class="whiteLine" src="https://img.freepik.com/premium-photo/bloodhounddog_830154-297.jpg?w=2000" title="White Line" alt="White Line">
