--- a/project1/page4.html
+++ b/project1/page4.html
@@ -5,9 +5,9 @@
     <link href="style.css" rel="stylesheet" type="text/css">
 </head>
     <body class="kubrickBody">
-        <a href="./index.html"><img class="homeButton" src="https://img.freepik.com/premium-vector/home-button_592324-18828.jpg"></a>
+        <a href="./index.html"><img class="homeButton" src="https://img.freepik.com/premium-vector/home-button_592324-18828.jpg" alt="Home Button"></a>
         <div id="directorTextGroup">
-        <p id="directorText">Stanley Kubrick (July 26, 1928 - March 7, 1999) was an American film director, producer, screenwriter and photographer. 
+        <p>Stanley Kubrick (July 26, 1928 - March 7, 1999) was an American film director, producer, screenwriter and photographer. 
             Widely considered one of the greatest filmmakers of all time, his films span a number of genres 
             and are known for their intense attention to detail, innovative cinematography, extensive set design and dark humor.</p>
         </div>
