--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
         <h1>CSIS 304 Landing Page</h1>
         <h3>Austin Wiebe</h2>
 
-        <a href="project1/">Links to future pages</a>
+        <a href="project1/" target="_blank">Links to future pages</a>
 
     </body>
 </html>
