--- a/project1/page4.html
+++ b/project1/page4.html
@@ -6,13 +6,14 @@
 </head>
     <body class="kubrickBody">
         <a href="./index.html"><img class="homeButton" src="https://img.freepik.com/premium-vector/home-button_592324-18828.jpg" alt="Home Button"></a>
-        <div id="directorTextGroup">
+      <div class = "kubrickTextBackground">
+        <div id="kubrickTextGroup">
         <p>Stanley Kubrick (July 26, 1928 - March 7, 1999) was an American film director, producer, screenwriter and photographer. 
             Widely considered one of the greatest filmmakers of all time, his films span a number of genres 
             and are known for their intense attention to detail, innovative cinematography, extensive set design and dark humor.</p>
         </div>
-        <img class="whiteLine" src="https://img.freepik.com/premium-photo/bloodhounddog_830154-297.jpg?w=2000" title="Home Button" alt="Home Button">
-        <div id="directorList">
+        <img class="kubrickWhiteLine" src="https://img.freepik.com/premium-photo/bloodhounddog_830154-297.jpg?w=2000" title="Home Button" alt="Home Button">
+        <div id="kubrickList">
             <h4>My Personal Top 5 Films In Kubrick's Filmography</h4>
             <ol>
                 <li>2001: A Space Odyssey</li>
@@ -22,8 +23,8 @@
                 <li>Dr. Strangelove</li>
             </ol>
         </div>
-        <img class="whiteLine" src="https://img.freepik.com/premium-photo/bloodhounddog_830154-297.jpg?w=2000" title="Home Button" alt="Home Button">
-        <div id="filmographyTable">
+        <img class="kubrickWhiteLine" src="https://img.freepik.com/premium-photo/bloodhounddog_830154-297.jpg?w=2000" title="Home Button" alt="Home Button">
+        <div id="kubrickFilmographyTable">
             <h4>Filmography</h4>
             <table>
                 <tr>
@@ -98,4 +99,5 @@
                 </tr>
               </table>
         </div>
+      </div>
     </body>
