added zen garden

--- a/index.html
+++ b/index.html
@@ -29,6 +29,7 @@
             <h3>Austin Wiebe</h2>
 
             <a href="project1/" target="_blank">Personal Project</a>
+            <a href="CSS Zen Garden/" target="_blank">CSS Zen Garden</a>
         </div>
 
     </body>
