--- a/index.html
+++ b/index.html
@@ -19,7 +19,17 @@
             }
 
             a {
+                text-decoration: none;
                 color:rgb(0, 195, 255)
+            }
+
+            a:hover {
+                color: white;
+            }
+
+            ul {
+                margin-right: 8%;
+                list-style: none;
             }
         </style>
     </head>
