first javascript push

--- a/index.html
+++ b/index.html
@@ -45,6 +45,9 @@
                 <li>
                     <a href="CSS Zen Garden/" target="_blank">CSS Zen Garden</a>
                 </li>
+                <li>
+                    <a href="JS Project/" target="_blank">JS Project</a>
+                </li>
             </ul>
         </div>
 
