--- a/JS Project/firstgame.html
+++ b/JS Project/firstgame.html
@@ -3,12 +3,29 @@
 <head>
     <title>Where's Waldo?</title>
     <link href="style.css" rel="stylesheet" type="text/css">
+    <script src="javascript.js" defer></script>
 </head>
-<body id="FirstGameBody">
-    <div id="firstimagecontainer">
-        <img src="https://images6.alphacoders.com/925/925904.jpg" usemap="#firstimagemap" id="firstgameimage">
-        <map name="firstimagemap">
-            <area shape="rect" coords="1890,796,1824,704" id="firstWaldo" href="https://en.wikipedia.org/wiki/Where%27s_Wally%3F_(book)" target="_blank">
+<body id="GameBody">
+    <div id="imagecontainer">
+        <img src="https://images6.alphacoders.com/925/925904.jpg" usemap="#imagemap" id="gameimage">
+        <map name="imagemap">
+            <area shape="rect" coords="1890,796,1824,704" id="Waldo" onclick="newWaldo()">
         </map>
+    </div>
+    <div id="mydiv">
+        <!-- Include a header DIV with the same name as the draggable DIV, followed by "header" -->
+        <div id="mydivheader">Drag this menu!</div>
+        <div id="time">  
+            <span class="digit" id="min"> 
+                00</span> 
+            <span class="txt">Min</span> 
+            <span class="digit" id="sec"> 
+                00</span> 
+            <span class="txt">Sec</span> 
+        </div>
+        <button id="gameButton" onclick="newWaldo()">Next Round!</button>
+        <a href="index.html">
+            <button id="gameButton2">Restart</button>
+        </a>
     </div>
 </body>
