--- a/JS Project/endpage.html
+++ b/JS Project/endpage.html
@@ -1,2 +1,14 @@
-You did it!
-<a href="index.html">go home</a>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <title>End Page</title>
+    <link href="style.css" rel="stylesheet" type="text/css">
+</head>
+    <body id="EndPageBody">
+        <div id="animatedHeader">
+            <h1>You Did It!</h1>
+        </div>
+        <a href="index.html">
+            <button id="endButton">Return to Start</button>
+        </a>
+    </body>
