--- a/JS Project/index.html
+++ b/JS Project/index.html
@@ -7,8 +7,13 @@
     <body id="HomePageBody">
         <div id="HomePageContent">
             <h1>Waldo is lost and needs you to find him!</h1>
+            <h3>Find Waldo by clicking on him</h3>
             <a href="firstgame.html">
                 <button type="button">Find Waldo</button>
             </a>
         </div>
+        <img src="https://www.innovative-medical.com/hubfs/where%20is%20waldo.png" id="homePageWaldo" usemap="#imgmap">
+        <map name="imgmap">
+            <area shape="rect" coords="0,0,200,643" href="firstgame.html" id="homeWaldo">
+        </map>
     </body>
