--- a/JS Project/endpage.html
+++ b/JS Project/endpage.html
@@ -3,12 +3,15 @@
 <head>
     <title>End Page</title>
     <link href="style.css" rel="stylesheet" type="text/css">
+    <script src="javascript.js" defer></script>
 </head>
     <body id="EndPageBody">
         <div id="animatedHeader">
             <h1>You Did It!</h1>
         </div>
-        <a href="index.html">
-            <button id="endButton">Return to Start</button>
-        </a>
+        <div id="endContent">
+            <a href="index.html">
+                <button id="endButton">Return to Start</button>
+            </a>
+        </div>
     </body>
