--- a/JS Project/firstgame.html
+++ b/JS Project/firstgame.html
@@ -22,7 +22,7 @@
                 00</span> 
             <span class="txt">Sec</span> 
         </div>
-        <button id="gameButton" onclick="solution()">Show Location</button>
+        <button id="gameButton" onclick="solution()">Show Solution</button>
         <a href="index.html">
             <button id="gameButton2">Restart</button>
         </a>
