--- a/index.html
+++ b/index.html
@@ -48,6 +48,9 @@
                 <li>
                     <a href="JS Project/" target="_blank">JS Project</a>
                 </li>
+                <li>
+                    <a href="http://web.cs.georgefox.edu/~awiebe20/" target="_blank">Final Project</a>
+                </li>
             </ul>
         </div>
 
